# cargo-infra-build

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test.rs
tests/route/: invalid_http_method.stderr  too_few_route_args.stderr  too_many_route_args.stderr
tests/route/invalid_examples/: invalid_http_method.rs  invalid_http_method.stderr  too_few_route_args.rs  too_few_route_args.stderr  too_many_route_args.rs  too_many_route_args.stderr
tests/route/valid_examples/: basic.rs
